@@ -1,14 +1,16 @@
 package graph.jena.examples;
 
 import graph.jena.datatypes.JenaOperandWrapper;
+import graph.jena.operatorsimpl.r2r.BinaryR2RJenaImpl;
+import graph.jena.operatorsimpl.r2r.UnaryR2RJenaImpl;
 import graph.jena.stream.JenaBindingStream;
 import graph.jena.stream.JenaStreamGenerator;
 import graph.jena.sds.SDSJena;
 import graph.jena.content.ValidatedGraph;
-import graph.jena.operatorsimpl.r2r.R2RJenaImpl;
+
 import graph.jena.sds.TimeVaryingFactoryJena;
 import graph.jena.operatorsimpl.r2s.RelationToStreamOpImpl;
-import operatorsimpl.s2r.StreamToRelationOpImpl;
+import shared.operatorsimpl.s2r.CSPARQLStreamToRelationOpImpl;
 import org.apache.jena.graph.Factory;
 import org.apache.jena.graph.Graph;
 import org.apache.jena.rdf.model.Model;
@@ -31,8 +33,8 @@ import org.streamreasoning.rsp4j.api.secret.time.Time;
 import org.streamreasoning.rsp4j.api.secret.time.TimeImpl;
 import org.streamreasoning.rsp4j.api.stream.data.DataStream;
 import org.apache.jena.shacl.Shapes;
-import relational.content.AccumulatorContentFactory;
-import operatorsimpl.r2r.DAG.DAGImpl;
+import shared.contentimpl.factories.AccumulatorContentFactory;
+import shared.operatorsimpl.r2r.DAG.DAGImpl;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -89,7 +91,7 @@ public class polyflowExample {
         ContinuousProgram<Graph, Graph, JenaOperandWrapper, Binding> cp = new ContinuousProgram<>();
 
         StreamToRelationOperator<Graph, Graph, JenaOperandWrapper> s2rOp =
-                new StreamToRelationOpImpl<>(
+                new CSPARQLStreamToRelationOpImpl<>(
                         tick,
                         instance,
                         "w1",
@@ -100,12 +102,18 @@ public class polyflowExample {
                         1000,
                         1000);
 
-        RelationToRelationOperator<JenaOperandWrapper> r2rOp = new R2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), false, "selection", "empty");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp1 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_1");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp2 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_2");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp3 = new BinaryR2RJenaImpl("", List.of("partial_1", "partial_2"), "partial_3");
+
+
         RelationToStreamOperator<JenaOperandWrapper, Binding> r2sOp = new RelationToStreamOpImpl();
 
         Task<Graph, Graph, JenaOperandWrapper, Binding> task = new TaskImpl<>();
         task = task.addS2ROperator(s2rOp, inputStream)
-                        .addR2ROperator(r2rOp)
+                        .addR2ROperator(r2rOp1)
+                .addR2ROperator(r2rOp2)
+                .addR2ROperator(r2rOp3)
                 .addR2SOperator(r2sOp)
                 .addDAG(new DAGImpl<>())
                 .addSDS(new SDSJena())
